Content Shift Fix

--- a/styles/source/home.scss
+++ b/styles/source/home.scss
@@ -109,12 +109,20 @@
         .image-wrap {
             position: relative;
             margin: 20px 0;
+            width: 100%;
 
             img {
                 position: absolute;
                 left: 0;
                 width: 100%;
                 height: 100%;
+                object-fit: contain;
+            }
+
+            .image-center {
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
             }
         }
 
@@ -135,8 +143,9 @@
             + h6,
             + h5,
             + h4,
+            + h3,
             + h2 {
-                margin-top: 50px;
+                margin-top: 100px;
             }
         }
 
