--- a/styles/source/single.scss
+++ b/styles/source/single.scss
@@ -94,6 +94,13 @@
                 position: absolute;
                 width: 100%;
                 height: 100%;
+                object-fit: contain;
+            }
+
+            .image-center {
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
             }
         }
 
